# mpimessagespace

./: README.md
src/: AUTHORS  Makefile.am  NEWS  autogen.sh  configure.in  datafile.c  datafile.h  main.c  messagespace.c  messagespace.h
src/osx/: Info.plist
src/win32/: messagespace.sln  messagespace.vcproj
